Cascading Change Log

2.7.0 [unreleased]

  Fixed issue where trap c.t.Tap#commitResource() would not get called if c.f.Flow#complete() was not called.

  Added support for o.a.h.m.l.CombineFileInputFormat in the Hadoop specific c.t.h.PartitionTap implementation.

  Fixed issue where c.f.h.HadoopFlowStep was setting 'mapred.output.path' for non file based o.a.h.m.OutputFormat
  implementations (backport from wip-3.0 at 5e0493a).

  Added c.t.Tap#prepareResourceForRead() and c.t.Tap#prepareResourceForWrite() methods to allow for client side tap
  resource initialization.

  Fixed issue where a failure to open or write a trap would pass the throwable up to the prior trap. Failures on trap
  io will now result in a c.f.Flow failure.

  Fixed issue where c.t.TupleEntry#setTuple( Tuple tuple ) and c.t.TupleEntry#setCanonicalTuple( Tuple tuple ) would
  cause an NPE if given an null argument.

  Updated trap handling to capture diagnostic information within a trap when configured via a c.t.TrapProps instance.

  Added the c.t.TrapProp class to provide fine grained configuration over c.t.Tap traps per c.f.Flow or per
  c.t.Tap instances.

  Updated c.t.u.TupleHasher to use MurmurHash3 32bit for hashCode calculation. Users relying on the old hashCode
  implementation for partitioning can set "cascading.tuple.hadoop.util.hasherpartitioner.uselegacyhash" to true.

  Updated c.f.h.HadoopPlanner and c.f.h2.Hadoop2MR1Planner to log a warning if a flow is being run on the wrong version
  of Hadoop.

  Fixed issue where c.m.a.URISanitizer would fail parsing glob expressions.

  Added ability to provide a custom cache to be used in c.p.a.AggregateBy and c.p.a.Unique.

  Added ability to use custom properties in the various invoke methods in c.CascadingTestCase to simplify testing of
  functions, filters, buffers and aggregators.

  Updated c.f.h.ProcessFlow to support optional counters provided by Riffle based flows.
